--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,25 @@
-# Java
-*.class
-*.jar
-*.war
-*.ear
-target/
-build/
-!.mvn/wrapper/maven-wrapper.jar
+# Backend
+backend/target/
+backend/.mvn/
+backend/*.iml
+backend/.idea/
+
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.env
 
 # IDE
+.vscode/
 .idea/
 *.iml
-.vscode/
-*.swp
-*.swo
 
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# OS
+.DS_Store
+Thumbs.db
 
-# React
-build/
-.env
+# Logs
+*.log
 
 # Docker
-*.log
+.env
